# tap-bexio

./: .gitignore  README.md  meltano.yml  mypy.ini  pyproject.toml  tap-bexio.sh  tox.ini
.github/workflows/: ci_workflow.yml
tap_bexio/: client.py  streams.py  tap.py
tap_bexio/schemas/: account_groups.json  accounting_journal.json  accounts.json  banking_bank_account.json  banking_payment.json  bills.json  business_activity.json  company_profile.json  contact.json  country.json  currencies.json  expenses.json  fictional_user.json  files.json  kb_invoice.json  kb_offer.json  kb_order.json  language.json  notes.json  payroll_employees.json  pr_project.json  pr_project_state.json  projects.json  salutation.json  task_status.json  tasks.json  timesheet.json  title.json  user.json
tap_bexio/tests/: __init__.py  test_core.py
