[tool.poetry]
name = "tap-bexio"
version = "0.0.1"
description = "`tap-bexio` is a Singer tap for bexio, built with the Meltano SDK for Singer Taps."
authors = ["Nino Müller"]
keywords = [
    "ELT",
    "bexio",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8.1, <3.11"
requests = "^2.25.1"
singer-sdk = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
tox = "^4.6.4"
pydocstyle = "^6.3.0"
mypy = "^1.4.1"
types-requests = "^2.31.0.1"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_bexio"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-bexio = 'tap_bexio.tap:Tapbexio.cli'
